[package]
name = "droll"
version = "0.1.0"
edition = "2021"
authors = ["Erik Kinnunen erik.kinn@gmail.com"]
description = "Dice notation parser and interpeter library"
repository = "https://github.com/erikjuhani/droll"
license-file = "../LICENSE"

[dependencies]
rand = "0.8.5"

[lib]
name = "droll" 
path = "src/lib.rs"
